--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h2>CHATBOX</h2>
     <div id="chatarea">
     </div>
     <div class="container">
         
-        <input type="text" id="inputBox" placeholder="Enter some text">
+        <input type="text" id="inputBox" placeholder="message">
         <button  id="sendButton">Send</button>
     
     </div>
